--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1807,6 +1807,85 @@ quick buy information in a template, that will be extracted in JS, which ensures
           "default": "More information"
         }
       ]
+    },
+    {
+      "type": "color_variants",
+      "name": "Color variants",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "product",
+          "id": "current_product",
+          "label": "Current product"
+        },
+        {
+          "type": "product_list",
+          "id": "color_variants",
+          "label": "Color variants"
+        },
+        {
+          "type": "header",
+          "content": "Block spacing"
+        },
+        {
+          "type": "number",
+          "id": "padding_top_mobile",
+          "label": "Spacing top mobile",
+          "default": 0
+        },
+        {
+          "type": "number",
+          "id": "padding_bottom_mobile",
+          "label": "Spacing bottom mobile",
+          "default": 0
+        },
+        {
+          "type": "number",
+          "id": "padding_top_desktop",
+          "label": "Spacing top desktop",
+          "default": 0
+        },
+        {
+          "type": "number",
+          "id": "padding_bottom_desktop",
+          "label": "Spacing bottom desktop",
+          "default": 0
+        },
+        {
+          "type": "number",
+          "id": "title_spacing",
+          "label": "Color title spacing",
+          "default": 8
+        },
+        {
+          "type": "header",
+          "content": "Swatches & Font"
+        },
+        {
+          "type": "number",
+          "id": "title_size_mobile",
+          "label": "Title size mobile",
+          "default": 13
+        },
+        {
+          "type": "number",
+          "id": "title_size_desktop",
+          "label": "Title size desktop",
+          "default": 13
+        },
+        {
+          "type": "number",
+          "id": "swatch_size",
+          "label": "Swatch size",
+          "default": 20
+        },
+        {
+          "type": "number",
+          "id": "swatch_spacing",
+          "label": "Swatch spacing",
+          "default": 4
+        }
+      ]
     }
   ]
 }
