--- a/snippets/price-list.liquid
+++ b/snippets/price-list.liquid
@@ -38,7 +38,7 @@ Supported variables
   endcase
 -%}
 
-<price-list class="price-list {% if context == 'product' %}price-list--product{% endif %}">
+<price-list class="price-list {% if context == 'product' %}price-list--product{% endif %}{% if custom_font == true %} custom-styles{% endif %}">
   {%- if variant != blank -%}
     {%- comment -%}
     --------------------------------------------------------------------------------------------------------------------
